@@ -119,7 +119,11 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Support cloned bugs in control blocking (closes: #337329)
     - Indicate which bugs are blocked after blocking (closes: #367496)
     - Obey package for usertags (closes: #376528)
-  
+    - Add link to subscribe to a bug (closes: #353260)
+    - Don't lc owner or forwarded at submit time (closes: #288384)
+    - Explain how to close bugs in the ack message (closes: #37605)
+    - Make the moreinfo ack more general (closes: #70810)
+
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
